step15/setup-test/namespace.yml
##
# 테스트용 네임스페이스 작성
#
apiVersion: v1
kind: Namespace
metadata:
  name: test         # 테스트용 네임스페이스
