step15/setup-test/network-policy.yml
#
# 네트워크 폴리시 설정
#

##
# 같은 네임스페이스에서의 접근만 허용
#
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-from-other-namespaces
  namespace: test
spec:
  podSelector:
    matchLabels:        #  ← 모든 파드가 대상
  ingress:
  - from:
    - podSelector: {}
---
## 
# app: expose 라벨이 붙은 컨테이너를 공개
#
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: expose-external
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: expose
  ingress:
  - from: []
